# CityNet

./: Dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
