[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Benjamin Cretois", email = "benjamin.cretois@nina.no"},
]
dependencies = [
    "numpy==1.19.5",
    "tensorflow==2.4.1",
    "pyyaml>=6.0",
    "tqdm==4.57.0",
    "librosa==0.8.1",
    "tf-slim==1.1.0",
    "matplotlib==3.3.4",
]
requires-python = ">=3.6"
license = {text = ""}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
